--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
   <head>
     <meta charset="utf-8">
-    <title>三健云会诊APP</title>
+    <title>挂号会诊APP</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0"/>
     <meta name="format-detection" content="telephone=no" />
     <style type="text/css">
